fix pricing page

--- a/api-reference/advanced-usage.mdx
+++ b/api-reference/advanced-usage.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Advanced Usage'
-description: 'Tips and techniques for optimal use of StealthGPT API'
+description: 'Learn advanced techniques and best practices for getting the most out of the StealthGPT API, including optimization strategies and advanced configuration options'
 ---
 
 # Advanced Usage Techniques
