--- a/api-reference/code-examples.mdx
+++ b/api-reference/code-examples.mdx
@@ -1,11 +1,8 @@
 ---
 title: 'Code Examples'
-description: 'Implementation examples for StealthGPT API in various programming languages'
+description: 'Explore practical examples of integrating and using the StealthGPT API in different programming languages'
 ---
 
-# Code Examples
-
-This page provides ready-to-use code examples for integrating the StealthGPT API in various programming languages.
 
 ## Python
 
