--- a/api-reference/pricing.mdx
+++ b/api-reference/pricing.mdx
@@ -3,35 +3,23 @@ title: 'Pricing'
 description: 'Understand the token-based pricing model for StealthGPT API'
 ---
 
-# Pricing
+# Token-Based Pricing
 
-StealthGPT API uses a token-based pricing model. You purchase tokens in advance and consume them as you make API requests.
+StealthGPT API uses a flexible token-based pricing model where you can purchase anywhere from 1 million to 10 million tokens.
 
-## Token Bundles
+## Token Purchase Options
 
-<CardGroup cols={3}>
-  <Card title="Starter" icon="seedling">
-    **200,000 tokens**
-    
-    $10
-    
-    No discount
-  </Card>
-  <Card title="Professional" icon="briefcase">
-    **2,010,000 tokens**
-    
-    $100
-    
-    5% discount
-  </Card>
-  <Card title="Enterprise" icon="building">
-    **22,500,000 tokens**
-    
-    $1,000
-    
-    10% discount
-  </Card>
-</CardGroup>
+<Note>
+  1 million tokens ≈ 750,000 words of generated content
+</Note>
+
+- **Minimum Purchase**: 1,000,000 tokens ($44.00)
+- **Maximum Purchase**: 10,000,000 tokens ($440.00)
+- **Price per Token**: $0.000044
+
+<Card title="Need more tokens?" icon="chart-line">
+  For purchases above 10 million tokens, please fill out the contact form at [stealthgpt.ai/stealthapi](https://www.stealthgpt.ai/stealthapi) for custom volume pricing.
+</Card>
 
 ## Token Consumption Rates
 
@@ -42,7 +30,7 @@ Different endpoints and settings consume tokens at different rates:
     <tr>
       <th>Endpoint</th>
       <th>Setting</th>
-      <th>Token Conversion Rate</th>
+      <th>Token Consumption</th>
     </tr>
   </thead>
   <tbody>
@@ -74,12 +62,14 @@ StealthGPT API has the following rate limits to ensure optimal performance and f
 - **3,500 RPM** (Requests Per Minute)
 - **350,000 TPM** (Tokens Per Minute)
 
-## Custom Volume Pricing
+## How to Purchase
 
-<Card title="Need higher volumes?" icon="chart-line">
-  For larger use cases, we offer custom pricing packages. Contact us at support@stealthgpt.ai with details about your use case and estimated monthly token requirements for a tailored quote.
-</Card>
+### Initial Token Purchase
+1. Sign in to your account at [stealthgpt.ai/stealthapi](https://www.stealthgpt.ai/stealthapi)
+2. Use the token slider to select your desired amount (between 1M and 10M tokens)
+3. Complete the purchase through our secure payment system
 
-## Purchasing Tokens
+### Additional Token Purchases
+Once you have an account, you can purchase additional tokens through your dashboard at [stealthgpt.ai/stealthapi/dashboard/billing](https://www.stealthgpt.ai/stealthapi/dashboard/billing)
 
-To purchase additional tokens, sign in to your StealthGPT account and visit the dashboard. You can buy token bundles directly through the platform's secure payment system. 
+Your tokens will be immediately available for use after purchase. 
