--- a/api-reference/endpoints/stealthify-articles.mdx
+++ b/api-reference/endpoints/stealthify-articles.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Blog Article Generation'
+title: 'Blog Writer'
 description: 'Generate complete undetectable blog articles with the /api/stealthify/articles endpoint'
 api: 'POST https://stealthgpt.ai/api/stealthify/articles'
 ---
