--- a/api-reference/endpoints/stealthify.mdx
+++ b/api-reference/endpoints/stealthify.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Content Generation and Rephrasing'
+title: 'Writer & Humanizer'
 description: 'Generate or rephrase content with the /api/stealthify endpoint'
 api: 'POST https://stealthgpt.ai/api/stealthify'
 ---
